--- a/campaign.css
+++ b/campaign.css
@@ -13,6 +13,7 @@ body {
     width: 90%;
     max-width: 900px;
     margin: auto;
+    padding: 0;
     font: 0.9em;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -139,6 +140,9 @@ fieldset {
     margin-top: -40px; 
 }
 
+form {
+    font-weight:light;
+}
 input[type=text],
 input[type=email] {
     border: none;
@@ -158,8 +162,8 @@ input[type=amount] {
     box-sizing: border-box;
 }
 
-.deduction h5 {
-    margin: 0.1em;
+.deduction {
+    font-weight: bold;
     font-size: medium;
 }
 
